# gdal-example-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: Core.cmake
src/: attributes.cpp  polygon_points.cpp  topology.cpp
